gccida/c0/output_387_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6836:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)operands[1])] == MODE_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6837:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)operands[2])] == MODE_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6848:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)operands[1])] == MODE_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6849:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)operands[2])] == MODE_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6860:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)operands[1])] == MODE_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6861:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)operands[2])] == MODE_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6872:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)operands[1])] == MODE_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6873:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)operands[2])] == MODE_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6889:9: error: use of undeclared identifier 'output_387_binary_op_buf'; did you mean 'output_387_binary_op'?
strcpy( output_387_binary_op_buf, ssep); 
        ^~~~~~~~~~~~~~~~~~~~~~~~
        output_387_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6781:14: note: 'output_387_binary_op' declared here
const char * output_387_binary_op( rtx insn, rtx *operands) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6891:9: error: use of undeclared identifier 'output_387_binary_op_buf'; did you mean 'output_387_binary_op'?
strcat( output_387_binary_op_buf, "ss\t{%2, %0|%0, %2}"); 
        ^~~~~~~~~~~~~~~~~~~~~~~~
        output_387_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6781:14: note: 'output_387_binary_op' declared here
const char * output_387_binary_op( rtx insn, rtx *operands) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6893:9: error: use of undeclared identifier 'output_387_binary_op_buf'; did you mean 'output_387_binary_op'?
strcat( output_387_binary_op_buf, "sd\t{%2, %0|%0, %2}"); 
        ^~~~~~~~~~~~~~~~~~~~~~~~
        output_387_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6781:14: note: 'output_387_binary_op' declared here
const char * output_387_binary_op( rtx insn, rtx *operands) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6897:9: error: use of undeclared identifier 'output_387_binary_op_buf'; did you mean 'output_387_binary_op'?
strcpy( output_387_binary_op_buf, p); 
        ^~~~~~~~~~~~~~~~~~~~~~~~
        output_387_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6781:14: note: 'output_387_binary_op' declared here
const char * output_387_binary_op( rtx insn, rtx *operands) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6913:9: error: use of undeclared identifier 'output_387_binary_op_buf'; did you mean 'output_387_binary_op'?
strcat( output_387_binary_op_buf, "p\t{%0, %2|%2, %0}"); 
        ^~~~~~~~~~~~~~~~~~~~~~~~
        output_387_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6781:14: note: 'output_387_binary_op' declared here
const char * output_387_binary_op( rtx insn, rtx *operands) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6915:9: error: use of undeclared identifier 'output_387_binary_op_buf'; did you mean 'output_387_binary_op'?
strcat( output_387_binary_op_buf, "p\t{%2, %0|%0, %2}"); 
        ^~~~~~~~~~~~~~~~~~~~~~~~
        output_387_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6781:14: note: 'output_387_binary_op' declared here
const char * output_387_binary_op( rtx insn, rtx *operands) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6916:8: error: use of undeclared identifier 'output_387_binary_op_buf'; did you mean 'output_387_binary_op'?
return output_387_binary_op_buf; 
       ^~~~~~~~~~~~~~~~~~~~~~~~
       output_387_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6781:14: note: 'output_387_binary_op' declared here
const char * output_387_binary_op( rtx insn, rtx *operands) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6920:9: error: use of undeclared identifier 'output_387_binary_op_buf'; did you mean 'output_387_binary_op'?
strcat( output_387_binary_op_buf, "\t{%2, %0|%0, %2}"); 
        ^~~~~~~~~~~~~~~~~~~~~~~~
        output_387_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6781:14: note: 'output_387_binary_op' declared here
const char * output_387_binary_op( rtx insn, rtx *operands) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6921:8: error: use of undeclared identifier 'output_387_binary_op_buf'; did you mean 'output_387_binary_op'?
return output_387_binary_op_buf; 
       ^~~~~~~~~~~~~~~~~~~~~~~~
       output_387_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6781:14: note: 'output_387_binary_op' declared here
const char * output_387_binary_op( rtx insn, rtx *operands) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6928:9: error: use of undeclared identifier 'output_387_binary_op_buf'; did you mean 'output_387_binary_op'?
strcat( output_387_binary_op_buf, "r%z1\t%1"); 
        ^~~~~~~~~~~~~~~~~~~~~~~~
        output_387_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6781:14: note: 'output_387_binary_op' declared here
const char * output_387_binary_op( rtx insn, rtx *operands) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6933:9: error: use of undeclared identifier 'output_387_binary_op_buf'; did you mean 'output_387_binary_op'?
strcat( output_387_binary_op_buf, "%z2\t%2"); 
        ^~~~~~~~~~~~~~~~~~~~~~~~
        output_387_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/i386.c:6781:14: note: 'output_387_binary_op' declared here
const char * output_387_binary_op( rtx insn, rtx *operands) 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_387_binary_op/src/obj/i386.o] Error 1
